@@ -1,3 +1,8 @@
+2006-01-26  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* stdbool_.h: Sync from gnulib.
+	Use signed char with all non-GCC compilers.
+
 2006-01-25  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* stdbool_.h: Merge from gnulib; we still don't quite match exactly,
